:white_check_mark: test updated
mod13q1 test was updated after bugs fix

--- a/nas_test_mod13q1_extraction.ipynb
+++ b/nas_test_mod13q1_extraction.ipynb
@@ -71,19 +71,19 @@
      "text": [
       "\n",
       "Variable ndvi.\n",
-      "Records: 6.\n",
+      "Records: 0.\n",
       "Database path: /private/nfs2/databases/observed/veg_o_modis_ndvi_mean_b_d16_p0d.csv.\n",
       "Pixel count database path: /private/nfs2/pcdatabases/observed/veg_o_modis_ndvi_mean_pc.csv.\n",
       "        \n",
       "\n",
       "Variable evi.\n",
-      "Records: 6.\n",
+      "Records: 0.\n",
       "Database path: /private/nfs2/databases/observed/veg_o_modis_evi_mean_b_d16_p0d.csv.\n",
       "Pixel count database path: /private/nfs2/pcdatabases/observed/veg_o_modis_evi_mean_pc.csv.\n",
       "        \n",
       "\n",
       "Variable nbr.\n",
-      "Records: 6.\n",
+      "Records: 0.\n",
       "Database path: /private/nfs2/databases/observed/veg_o_int_nbr_mean_b_d16_p0d.csv.\n",
       "Pixel count database path: /private/nfs2/pcdatabases/observed/veg_o_int_nbr_mean_pc.csv.\n",
       "        \n"
@@ -129,24 +129,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing scene A2006161 for ndvi\n",
-      "Time elapsed for A2006161: 133 seconds\n",
-      "Processing scene A2006161 for evi\n",
-      "Time elapsed for A2006161: 97 seconds\n",
-      "Processing scene A2006161 for nbr\n",
-      "Time elapsed for A2006161: 140 seconds\n",
-      "Processing scene A2019177 for ndvi\n",
-      "Time elapsed for A2019177: 138 seconds\n",
-      "Processing scene A2019177 for evi\n",
-      "Time elapsed for A2019177: 119 seconds\n",
-      "Processing scene A2019177 for nbr\n",
-      "Time elapsed for A2019177: 135 seconds\n",
-      "Processing scene A2008081 for ndvi\n",
-      "Time elapsed for A2008081: 120 seconds\n",
-      "Processing scene A2008081 for evi\n",
-      "Time elapsed for A2008081: 109 seconds\n",
-      "Processing scene A2008081 for nbr\n",
-      "Time elapsed for A2008081: 122 seconds\n"
+      "Processing scene A2000049 for ndvi\n",
+      "Time elapsed for A2000049: 119 seconds\n",
+      "Processing scene A2000049 for evi\n",
+      "Time elapsed for A2000049: 107 seconds\n",
+      "Processing scene A2000049 for nbr\n",
+      "Time elapsed for A2000049: 123 seconds\n",
+      "Processing scene A2000065 for ndvi\n",
+      "Time elapsed for A2000065: 121 seconds\n",
+      "Processing scene A2000065 for evi\n",
+      "Time elapsed for A2000065: 110 seconds\n",
+      "Processing scene A2000065 for nbr\n",
+      "Time elapsed for A2000065: 124 seconds\n",
+      "Processing scene A2000081 for ndvi\n",
+      "Time elapsed for A2000081: 116 seconds\n",
+      "Processing scene A2000081 for evi\n",
+      "Time elapsed for A2000081: 115 seconds\n",
+      "Processing scene A2000081 for nbr\n",
+      "Time elapsed for A2000081: 129 seconds\n"
      ]
     }
    ],
@@ -168,43 +168,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             name_id  1001001  1001002  1001003  1020002  1020003  1021001  \\\n",
-      "date                                                                         \n",
-      "2000-02-18  A2000049       49      101       67       50       85      112   \n",
-      "2000-03-05  A2000065       87      130      109       65       96      119   \n",
-      "2000-03-21  A2000081      108      144      125       80      110      126   \n",
-      "2000-04-06  A2000097      110      139      122       79      106      120   \n",
-      "2000-04-22  A2000113       92      126      107       61       88      111   \n",
-      "2000-05-08  A2000129       88      121      102       74       97      115   \n",
+      "Empty DataFrame\n",
+      "Columns: [name_id, 1001001, 1001002, 1001003, 1020002, 1020003, 1021001, 1021002, 1041002, 1044001, 1050002, 1050004, 1201001, 1201003, 1201005, 1210001, 1211001, 1300009, 1310002, 1410004, 1502002, 1502008, 1610004, 1730002, 1730003, 1730007, 1730012, 2101001, 2103001, 2103002, 2103014, 2104002, 2104003, 2104013, 2105001, 2105002, 2105005, 2105007, 2110001, 2110002, 2110004, 2110031, 2112005, 2112006, 2112007, 2113001, 2120001, 2510001, 3022001, 3041001, 3041002, 3041003, 3041004, 3041005, 3050001, 3404001, 3414001, 3421001, 3430001, 3430003, 3431001, 3434003, 3450001, 3453001, 3802001, 3804002, 3806001, 3814003, 3815001, 3815002, 3820001, 3820002, 3820003, 3825001, 4301002, 4302001, 4308001, 4311001, 4313001, 4314002, 4320001, 4323001, 4501001, 4503001, 4511002, 4512001, 4513001, 4514001, 4515002, 4520001, 4522002, 4523002, 4530001, 4531002, 4532001, 4533002, 4537001, 4558001, 4703002, 4704001, ...]\n",
+      "Index: []\n",
       "\n",
-      "            1021002  1041002  1044001  ...  12820001  12825002  12861001  \\\n",
-      "date                                   ...                                 \n",
-      "2000-02-18       81      109      107  ...       776       401       460   \n",
-      "2000-03-05       94      114      115  ...       844       364       507   \n",
-      "2000-03-21       98      116      114  ...       753       495       541   \n",
-      "2000-04-06       94      113      115  ...       680       415       535   \n",
-      "2000-04-22       88      108      111  ...       626       391       530   \n",
-      "2000-05-08       94      113      111  ...       614       290       525   \n",
-      "\n",
-      "            12863002  12865001  12872001  12876001  12876004  12878001  \\\n",
-      "date                                                                     \n",
-      "2000-02-18       542       647       595       636       671       658   \n",
-      "2000-03-05       610       674       618       697       770       743   \n",
-      "2000-03-21       620       682       627       678       768       731   \n",
-      "2000-04-06       607       603       562       543       600       557   \n",
-      "2000-04-22       581       592       524       514       565       549   \n",
-      "2000-05-08       545       545       498       492       521       486   \n",
-      "\n",
-      "            12930001  \n",
-      "date                  \n",
-      "2000-02-18       188  \n",
-      "2000-03-05       468  \n",
-      "2000-03-21       407  \n",
-      "2000-04-06       375  \n",
-      "2000-04-22       376  \n",
-      "2000-05-08       270  \n",
-      "\n",
-      "[6 rows x 433 columns]\n"
+      "[0 rows x 433 columns]\n"
      ]
     }
    ],
@@ -257,50 +225,26 @@
       "2000-02-18  A2000049       49      101       67       50       85      112   \n",
       "2000-03-05  A2000065       87      130      109       65       96      119   \n",
       "2000-03-21  A2000081      108      144      125       80      110      126   \n",
-      "2000-04-06  A2000097      110      139      122       79      106      120   \n",
-      "2000-04-22  A2000113       92      126      107       61       88      111   \n",
-      "2000-05-08  A2000129       88      121      102       74       97      115   \n",
-      "2006-06-10  A2006161       95      125      105       76       97      112   \n",
-      "2019-06-26  A2019177      105      126      110       83      101      115   \n",
-      "2008-03-21  A2008081      119      141      127       87      112      120   \n",
       "\n",
       "            1021002  1041002  1044001  ...  12820001  12825002  12861001  \\\n",
       "date                                   ...                                 \n",
       "2000-02-18       81      109      107  ...       776       401       460   \n",
       "2000-03-05       94      114      115  ...       844       364       507   \n",
       "2000-03-21       98      116      114  ...       753       495       541   \n",
-      "2000-04-06       94      113      115  ...       680       415       535   \n",
-      "2000-04-22       88      108      111  ...       626       391       530   \n",
-      "2000-05-08       94      113      111  ...       614       290       525   \n",
-      "2006-06-10       91      113      115  ...       349        97       395   \n",
-      "2019-06-26       96      116      113  ...       222        41       110   \n",
-      "2008-03-21      102      119      120  ...       833       543       585   \n",
       "\n",
       "            12863002  12865001  12872001  12876001  12876004  12878001  \\\n",
       "date                                                                     \n",
-      "2000-02-18       542     647.0     595.0       636       671       658   \n",
-      "2000-03-05       610     674.0     618.0       697       770       743   \n",
-      "2000-03-21       620     682.0     627.0       678       768       731   \n",
-      "2000-04-06       607     603.0     562.0       543       600       557   \n",
-      "2000-04-22       581     592.0     524.0       514       565       549   \n",
-      "2000-05-08       545     545.0     498.0       492       521       486   \n",
-      "2006-06-10       461     110.0      27.0        92       113        81   \n",
-      "2019-06-26        11       NaN       NaN         6        29        18   \n",
-      "2008-03-21       691     697.0     640.0       674       711       684   \n",
+      "2000-02-18       542       647       595       636       671       658   \n",
+      "2000-03-05       610       674       618       697       770       743   \n",
+      "2000-03-21       620       682       627       678       768       731   \n",
       "\n",
       "            12930001  \n",
       "date                  \n",
       "2000-02-18       188  \n",
       "2000-03-05       468  \n",
       "2000-03-21       407  \n",
-      "2000-04-06       375  \n",
-      "2000-04-22       376  \n",
-      "2000-05-08       270  \n",
-      "2006-06-10        87  \n",
-      "2019-06-26        48  \n",
-      "2008-03-21       539  \n",
       "\n",
-      "[9 rows x 433 columns]\n"
+      "[3 rows x 433 columns]\n"
      ]
     }
    ],
