Update to 10 connections

--- a/gfs_download.ipynb
+++ b/gfs_download.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# download with axel\n",
-    "base_list = ['axel']\n",
+    "base_list = ['axel', '-n', '10']\n",
     "\n",
     "for chunk in download_chunks:\n",
     "    subprocess.run(base_list + chunk)"
